cambios responsive y modal100%

--- a/contacto.html
+++ b/contacto.html
@@ -18,9 +18,9 @@
             <div class="logo-container column column--50">
                 <h1 class="logo">SUSHI HOUSE</h1>
             </div>
-            <div class="main-header__contactInfo column column--50">
-                <p class="main-header__contactInfo__phone"><i class="fa-solid fa-phone"></i>+34 123456789</p>
-                <p class="main-header__contactInfo__address"><i class="fa-solid fa-location-dot"></i>Gran Via, Bilbao
+            <div class="main__header-contactinfo column column--50">
+                <p class="main__header-contactinfo-phone"><i class="fa-solid fa-phone"></i>+34 123456789</p>
+                <p class="main__header-contactinfo-address"><i class="fa-solid fa-location-dot"></i>Gran Via, Bilbao
                 </p>
             </div>
         </div>
@@ -88,7 +88,7 @@
                     <input type="text" class="formulario__input-txt" name="telefono">
                     <label for="" class="formulario__label">Mensaje:</label>
                     <textarea name="mensaje" id="" cols="30" rows="10" class="formulario__textarea"></textarea>
-                    <input type="submit" class=" btn formualrio__btn" value="Enviar">
+                    <input type="submit" class=" btn formulario__btn" value="Enviar">
                 </form>
             </div>
         </section>
