--- a/nosotros.html
+++ b/nosotros.html
@@ -18,9 +18,9 @@
             <div class="logo-container column column--50">
                 <h1 class="logo">SUSHI HOUSE</h1>
             </div>
-            <div class="main-header__contactInfo column column--50">
-                <p class="main-header__contactInfo__phone"><i class="fa-solid fa-phone"></i>+34 123456789</p>
-                <p class="main-header__contactInfo__address"><i class="fa-solid fa-location-dot"></i>Gran Via, Bilbao</p>
+            <div class="main__header-contactinfo column column--50">
+                <p class="main__header-contactinfo-phone"><i class="fa-solid fa-phone"></i>+34 123456789</p>
+                <p class="main__header-contactinfo-address"><i class="fa-solid fa-location-dot"></i>Gran Via, Bilbao</p>
             </div>
         </div>
     </header>
@@ -69,17 +69,17 @@
                 <div class="column column--33">
                     <h3 class="our-team__title">Pablo</h3>
                     <img src="./images/chef_1.jpg" alt="" class="our-team__img">
-                    <p class="our-team__txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt tempora quam qui blanditiis id nemo facilis temporibus dolores accusantium est! Porro quod atque unde dolores, libero debitis laborum iure accusantium.</p>
+                    <p class="our-team__txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="column column--33">
                     <h3 class="our-team__title">Marta</h3>
                     <img src="./images/chef_2.jpg" alt="" class="our-team__img">
-                    <p class="our-team__txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt tempora quam qui blanditiis id nemo facilis temporibus dolores accusantium est! Porro quod atque unde dolores, libero debitis laborum iure accusantium.</p>
+                    <p class="our-team__txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="column column--33">
                     <h3 class="our-team__title">Guille</h3>
                     <img src="./images/chef_3.jpg" alt="" class="our-team__img">
-                    <p class="our-team__txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt tempora quam qui blanditiis id nemo facilis temporibus dolores accusantium est! Porro quod atque unde dolores, libero debitis laborum iure accusantium.</p>
+                    <p class="our-team__txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
         </section>
