--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
 <body>
 
-    <header class="main-header">
+    <header class="main__header">
         <div class="container container--flex">
             <div class="logo-container column column--50">
                 <h1 class="logo">SUSHI HOUSE</h1>
             </div>
-            <div class="main-header__contactInfo column column--50">
-                <p class="main-header__contactInfo__phone"><i class="fa-solid fa-phone"></i>+34 123456789</p>
-                <p class="main-header__contactInfo__address"><i class="fa-solid fa-location-dot"></i>Gran Via, Bilbao</p>
+            <div class="main__header-contactinfo column column--50">
+                <p class="main__header-contactinfo-phone"><i class="fa-solid fa-phone"></i>+34 123456789</p>
+                <p class="main__header-contactinfo-address"><i class="fa-solid fa-location-dot"></i>Gran Via, Bilbao</p>
             </div>
         </div>
     </header>
@@ -48,7 +48,7 @@
     </nav>
 
     <section class="banner">
-        <img src="./images/sushi.jpg" alt="" class="banner__img">
+        <img loading="lazy" src="./images/sushi.jpg" alt="" class="banner__img">
         <div class="banner__content">Best Sushi In Town</div>
     </section>
 
@@ -64,10 +64,10 @@
             </div>
         </section>
 
-        <section class="group main__about__description">
+        <section class="group main__about-description">
             <div class="container container--flex">
                 <div class="column column--50">
-                    <img src="./images/sushi_1.jpg" alt="">
+                    <img loading="lazy" src="./images/sushi_1.jpg" alt="">
                 </div>
                 <div class="column column--50">
                     <h3 class="column__title">Elaboracion artesanal</h3>
@@ -83,22 +83,22 @@
             <h2 class="group__title">Especialidades</h2>
             <div class="container container--flex">
                 <div class="column column--50-25">
-                    <img src="./images/sushi_2.jpg" alt="" class="today-special__img">
+                    <img loading="lazy" src="./images/sushi_2.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Especialidad 1</div>
                     <div class="today-special__price">25 euros</div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="./images/sushi_3.jpg" alt="" class="today-special__img">
+                    <img loading="lazy" src="./images/sushi_3.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Especialidad 2</div>
                     <div class="today-special__price">30 euros</div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="./images/sushi_4.jpg" alt="" class="today-special__img">
+                    <img loading="lazy" src="./images/sushi_4.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Especialidad 3</div>
                     <div class="today-special__price">35 euros</div>
                 </div>
                 <div class="column column--50-25">
-                    <img src="./images/sushi_5.jpg" alt="" class="today-special__img">
+                    <img loading="lazy" src="./images/sushi_5.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Especialidad 4</div>
                     <div class="today-special__price">50 euros</div>
                 </div>
