cambios diseño y resize imagenes

--- a/contacto.html
+++ b/contacto.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/637ee434dc.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/app.css">
-    <link rel="stylesheet" href="./styles/contacto.css">
+    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/contacto.css">
     <title>Contacto | Sushi House</title>
 </head>
 
@@ -50,7 +50,7 @@
     </nav>
 
     <section class="banner">
-        <img src="./images/sushi_gallery_banner.jpg" alt="" class="banner__img">
+        <img src="./assets/sushi_gallery_banner.jpg" alt="" class="banner__img">
         <div class="banner__content">ALGUNA SUGERENCIA?<br>ESCRIBENOS!!</div>
     </section>
 
