--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/637ee434dc.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/app.css">
+    <link rel="stylesheet" href="./css/app.css">
     <title>Sushi House</title>
 </head>
 
@@ -48,7 +48,7 @@
     </nav>
 
     <section class="banner">
-        <img loading="lazy" src="./images/sushi.jpg" alt="" class="banner__img">
+        <img loading="lazy" src="./assets/sushi.jpg" alt="" class="banner__img">
         <div class="banner__content">Best Sushi In Town</div>
     </section>
 
@@ -67,7 +67,7 @@
         <section class="group main__about-description">
             <div class="container container--flex">
                 <div class="column column--50">
-                    <img loading="lazy" src="./images/sushi_1.jpg" alt="">
+                    <img loading="lazy" src="./assets/sushi_1.jpg" alt="">
                 </div>
                 <div class="column column--50">
                     <h3 class="column__title">Elaboracion artesanal</h3>
@@ -83,22 +83,22 @@
             <h2 class="group__title">Especialidades</h2>
             <div class="container container--flex">
                 <div class="column column--50-25">
-                    <img loading="lazy" src="./images/sushi_2.jpg" alt="" class="today-special__img">
+                    <img loading="lazy" src="./assets/sushi_2.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Especialidad 1</div>
                     <div class="today-special__price">25 euros</div>
                 </div>
                 <div class="column column--50-25">
-                    <img loading="lazy" src="./images/sushi_3.jpg" alt="" class="today-special__img">
+                    <img loading="lazy" src="./assets/sushi_3.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Especialidad 2</div>
                     <div class="today-special__price">30 euros</div>
                 </div>
                 <div class="column column--50-25">
-                    <img loading="lazy" src="./images/sushi_4.jpg" alt="" class="today-special__img">
+                    <img loading="lazy" src="./assets/sushi_4.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Especialidad 3</div>
                     <div class="today-special__price">35 euros</div>
                 </div>
                 <div class="column column--50-25">
-                    <img loading="lazy" src="./images/sushi_5.jpg" alt="" class="today-special__img">
+                    <img loading="lazy" src="./assets/sushi_5.jpg" alt="" class="today-special__img">
                     <div class="today-special__title">Especialidad 4</div>
                     <div class="today-special__price">50 euros</div>
                 </div>
@@ -129,7 +129,6 @@
     </footer>
 
     <script src="./js/app.js"></script>
-    <script src="./js/modal.js"></script>
 </body>
 
 </html>
