--- a/nosotros.html
+++ b/nosotros.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/637ee434dc.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/app.css">
-    <link rel="stylesheet" href="./styles/nosotros.css">
+    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/nosotros.css">
     <title>Nosotros | Sushi House</title>
 </head>
 
@@ -49,7 +49,7 @@
     </nav>
 
     <section class="banner">
-        <img src="./images/banner_nosotros2.jpg" alt="" class="banner__img">
+        <img src="./assets/banner_nosotros2.jpg" alt="" class="banner__img">
         <div class="banner__content">TODAVIA NO NOS CONOCES?</div>
     </section>
 
@@ -68,17 +68,17 @@
             <div class="container container--flex">
                 <div class="column column--33">
                     <h3 class="our-team__title">Pablo</h3>
-                    <img src="./images/chef_1.jpg" alt="" class="our-team__img">
+                    <img src="./assets/chef_1.jpg" alt="" class="our-team__img">
                     <p class="our-team__txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="column column--33">
                     <h3 class="our-team__title">Marta</h3>
-                    <img src="./images/chef_2.jpg" alt="" class="our-team__img">
+                    <img src="./assets/chef_2.jpg" alt="" class="our-team__img">
                     <p class="our-team__txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="column column--33">
                     <h3 class="our-team__title">Guille</h3>
-                    <img src="./images/chef_3.jpg" alt="" class="our-team__img">
+                    <img src="./assets/chef_3.jpg" alt="" class="our-team__img">
                     <p class="our-team__txt">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
@@ -110,5 +110,4 @@
     <script src="./js/app.js"></script>
     <script src="./js/modal.js"></script>
 </body>
-
 </html>
