--- a/galeria.html
+++ b/galeria.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/637ee434dc.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/app.css">
-    <link rel="stylesheet" href="./styles/galeria.css">
+    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/galeria.css">
     <title>Nosotros | Sushi House</title>
 </head>
 
@@ -56,7 +56,7 @@
     </nav>
 
     <section class="banner">
-        <img src="./images/sushi_gallery_banner2.jpg" alt="" class="banner__img">
+        <img src="./assets/sushi_gallery_banner2.jpg" alt="" class="banner__img">
         <div class="banner__content">OISHI 美味しい!!!</div>
     </section>
 
@@ -65,20 +65,20 @@
             <h2 class="group__title">Nuestra Galeria</h2>
             <div class="container container--flex">
                 <div class="column column--50-25">
-                    <img src="/images/sushi_gallery_1.jpg" alt="" class="gallery__img gallery__img--big">
-                    <img src="./images/sushi_gallery_2.jpg" alt="" class="gallery__img gallery__img--small">
+                    <img src="/assets/sushi_gallery_1.jpg" alt="" class="gallery__img gallery__img--big">
+                    <img src="./assets/sushi_gallery_2.jpg" alt="" class="gallery__img gallery__img--small">
                 </div>
                 <div class="column column--50-25">
-                    <img src="./images/sushi_gallery_3.jpg" alt="" class="gallery__img gallery__img--small">
-                    <img src="./images/sushi_gallery_4.jpg" alt="" class="gallery__img gallery__img--big">
+                    <img src="./assets/sushi_gallery_3.jpg" alt="" class="gallery__img gallery__img--small">
+                    <img src="./assets/sushi_gallery_4.jpg" alt="" class="gallery__img gallery__img--big">
                 </div>
                 <div class="column column--50-25">
-                    <img src="./images/sushi_gallery_5.jpg" alt="" class="gallery__img gallery__img--big">
-                    <img src="./images/sushi_gallery_6.jpg" alt="" class="gallery__img gallery__img--small">
+                    <img src="./assets/sushi_gallery_5.jpg" alt="" class="gallery__img gallery__img--big">
+                    <img src="./assets/sushi_gallery_6.jpg" alt="" class="gallery__img gallery__img--small">
                 </div>
                 <div class="column column--50-25">
-                    <img src="./images/sushi_gallery_7.jpg" alt="" class="gallery__img gallery__img--small">
-                    <img src="./images/sushi_gallery_8.jpg" alt="" class="gallery__img gallery__img--big">
+                    <img src="./assets/sushi_gallery_7.jpg" alt="" class="gallery__img gallery__img--small">
+                    <img src="./assets/sushi_gallery_8.jpg" alt="" class="gallery__img gallery__img--big">
                 </div>
             </div>
         </div>
@@ -109,5 +109,4 @@
     <script src="./js/app.js"></script>
     <script src="./js/modal.js"></script>
 </body>
-
 </html>
