formulario con email netlify

--- a/contacto.html
+++ b/contacto.html
@@ -79,8 +79,7 @@
                         </a>
                     </div>
                 </div>
-                <!-- https://formsubmit.co/pablo.gutierrez.pruebas@gmail.com -->
-                <form action="./mail.php" method="POST" class="formulario column column--50">
+                <form name="formulario" class="formulario column column--50" netlify>
                     <label for="name" class="formulario__label">Nombre:</label>
                     <input id="name" type="text" class="formulario__input-txt" name="nombre">
                     <label for="email" class="formulario__label">Correo:</label>
