--- a/contacto.html
+++ b/contacto.html
@@ -69,7 +69,7 @@
                     <p class="column__txt"><span class="fa-solid fa-envelope"></span>Email : sushihouse@gmail.com</p>
                     <div class="social-icon">
                         <a href="" class="social-icon__link">
-                            <i class="fa-brands fa-facebook"></i>
+                             <i class="fa-brands fa-facebook"></i>
                         </a>
                         <a href="" class="social-icon__link">
                             <i class="fa-brands fa-twitter"></i>
@@ -79,7 +79,7 @@
                         </a>
                     </div>
                 </div>
-                <form name="formulario" class="formulario column column--50" netlify>
+                <form name="formulario" class="formulario column column--50">
                     <label for="name" class="formulario__label">Nombre:</label>
                     <input id="name" type="text" class="formulario__input-txt" name="nombre">
                     <label for="email" class="formulario__label">Correo:</label>
