quitado netlify form

--- a/contacto.html
+++ b/contacto.html
@@ -79,7 +79,7 @@
                         </a>
                     </div>
                 </div>
-                <form name="formulario" class="formulario column column--50" netlify>
+                <form name="formulario" class="formulario column column--50">
                     <label for="name" class="formulario__label">Nombre:</label>
                     <input id="name" type="text" class="formulario__input-txt" name="nombre">
                     <label for="email" class="formulario__label">Correo:</label>
